# cargo-cbt

./: .gitignore  Cargo.toml  README.md  test.sh
cargo-cbt/: cli.rs  errors.rs  lib.rs  manifest.rs  sh.rs
src/: cli.rs  errors.rs  lib.rs  main.rs  manifest.rs
