[package]
name = "cargo-cbt"
version = "0.0.5"
edition = "2024"
description = "Shortcut to cargo check, cargo build and cargo test"
documentation = "https://docs.rs/cargo-cbt"
readme = "README.md"
homepage = "https://github.com/gabrielfalcao/cargo-cbt"
license = "MIT"
autoexamples = false
autobenches = false
autotests = false



[lib]
name = "cargo_cbt"
path = "src/lib.rs"
test = false
doctest = false
bench = false
# doc = false


[[bin]]
name = "cargo-cbt"
path = "src/main.rs"
test = false
doctest = false
bench = false
# doc = false

[dependencies]
clap = { version = "4.5.48", features = ["derive", "env", "string", "unicode", "wrap_help"] }
serde = { version = "1.0.226", features = ["derive"] }
iocore = { version = "3.1.0" }
toml = "0.9.7"
